--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <header><img src="/resources/Vector.png" alt="logo" id="logo"></header>
         <div class="message">
-            <textarea name="message" id="msg" cols="30" rows="10" placeholder="Escriba su mensaje/Write your message"></textarea>
+            <textarea name="message" id="msg" cols="30" rows="10" placeholder="Escriba su mensaje"></textarea>
         </div>
         <div class="buttons">
             <div id="warn">
